# newt-hacking

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_arc_input_prep.ipynb  02_atac_split.ipynb  Preprocessing.ipynb
scripts/: arc_qc.py  split_atac.py  stage_gex.py
