[project]
name = "newt-hacking"
version = "0.1.0"
description = "My attempts to learn and explore DNA sequencing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "biopython>=1.87",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.2",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.11.1",
    "muon>=0.1.8",
    "polars>=1.43.0",
    "pyarrow>=25.0.0",
    "pyfastx>=2.3.1",
    "pysam>=0.24.0",
    "scanpy>=1.12.2",
    "seaborn>=0.13.2",
]
